argocd-nodeport-fixed.yaml
# ArgoCD NodePort Service - Fixed for Kind Cluster
# Uses port 30001 which is mapped in Kind cluster configuration

apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: argocd
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 30001
    name: http
  - port: 443
    protocol: TCP
    targetPort: 8080
    nodePort: 30002
    name: https
  selector:
    app.kubernetes.io/name: argocd-server
